--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,18 +1,15 @@
 spring:
   mail:
-    host: smtp.office365.com
+    host: smtp.gmail.com
     port: 587
-    username: nhom16ltdd@outlook.com.vn
-    password: fccldzzchvevklea
+    username: ${MAIL_USERNAME}
+    password: ${MAIL_PASSWORD}
     properties:
       mail:
         smtp:
           auth: true
           starttls:
             enable: true
-            required: true
-          ssl:
-            trust: smtp.office365.com
 
 
   devtools:
