--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,14 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 			<version>3.3.5</version>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.2.2</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
