--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -19,7 +19,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/web
     username: root
-    password: 123456
+    password: 123456789
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
